--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "i18next-http-backend": "^1.3.1",
     "i18next-localstorage-backend": "^3.1.3",
     "js-cookie": "^3.0.1",
-    "marked": "^3.0.4",
+    "marked": "4.0.10",
     "mdi-material-ui": "^7.7.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
