--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.4.3",
-    "xlsx": "^0.17.3"
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
