support custom security headers

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -16,6 +16,7 @@ server {
   # allow caching of static files
   location ~ ^/static/ {
     add_header Cache-Control "public, max-age=315360000";
+    include security.conf;
     break;
   }
 
@@ -27,14 +28,7 @@ server {
 
   location / {
     add_header Cache-Control no-cache;
-
-    # https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
-    add_header X-Frame-Options SAMEORIGIN;
-    add_header X-Content-Type-Options nosniff;
-
-    # https://www.owasp.org/index.php/List_of_useful_HTTP_headers
-    add_header X-XSS-Protection "1; mode=block";
-    add_header Referrer-Policy "no-referrer";
+    include security.conf;
 
     # include /etc/nginx/http2_push.conf; # automatically push js files needed at page load. disabled for now, waiting for cache digest feature of http2
     index index.html;
