--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-new-node": "echo NodeJS 18/19 only! && NODE_OPTIONS=--openssl-legacy-provider npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
