--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
     "@types/react-recaptcha": "^2.3.4",
-    "@types/react-router-dom": "^5.3.0",
     "@types/xlsx": "^0.0.36",
     "components-care": "github:Samedis-care/react-components#master_dist",
     "http-proxy-middleware": "^2.0.1",
@@ -39,39 +38,33 @@
     "react-i18next": "^11.12.0",
     "react-query": "^3.24.3",
     "react-recaptcha": "^2.3.10",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.4.3"
+    "typescript": "^5.3.3",
+    "ts-loader": "^9.5.1",
+    "css-loader": "^6.10.0",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2",
+    "html-webpack-plugin": "^5.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack-dev-server --mode development --server-type https",
+    "build": "webpack-cli",
     "build-new-node": "echo NodeJS 18/19 only! && NODE_OPTIONS=--openssl-legacy-provider npm run build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "lint-fix": "eslint --fix 'src/**/*.{ts,tsx}'",
-    "update-cc": "npm rm components-care && npm i github:Samedis-care/react-components#master_dist --save --legacy-peer-deps"
+    "update-cc": "npm rm components-care && npm i github:Samedis-care/react-components#master_dist --save --legacy-peer-deps",
+    "prepare": "husky"
   },
   "sideEffects": [
     "./src/index.tsx",
     "./src/i18n.ts",
     "./src/components-care/patches/ImageTypeDeserializer.ts"
   ],
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "plugin:prettier/recommended"
-    ],
-    "rules": {
-      "prettier/prettier": "warn"
-    }
-  },
   "husky": {
     "hooks": {
       "pre-commit": "./mktransifex.sh && lint-staged --allow-empty",
-      "pre-push": "tsc -i --tsBuildInfoFile .tscbuildcache"
+      "pre-push": "tsc --noEmit -i --tsBuildInfoFile .tscbuildcache"
     }
   },
   "lint-staged": {
@@ -91,14 +84,19 @@
     ]
   },
   "engines": {
-    "npm": ">=7.x"
+    "npm": ">=8.x"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "cldr-data": "^36.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.4.0"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2"
   }
 }
