--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@types/react-dom": "^17",
     "@types/react-recaptcha": "^2.3.7",
     "components-care": "github:Samedis-care/react-components#master_dist",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -36,14 +39,12 @@
     "react-i18next": "^14.1.0",
     "react-query": "^3.39.3",
     "react-recaptcha": "^2.3.10",
-    "typescript": "^5.4.2",
-    "ts-loader": "^9.5.1",
-    "css-loader": "^6.10.0",
     "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2",
-    "html-webpack-plugin": "^5.6.0"
+    "webpack-dev-server": "^5.0.2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --server-type https",
@@ -79,14 +80,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "cldr-data": "^36.0.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2"
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5"
   }
 }
