dev backend proxy

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,6 @@ REACT_APP_SENTRY_ENABLED=false
 REACT_APP_SENTRY_SAMPLE_RATE=0.0
 REACT_APP_SENTRY_ENV=local-dev
 REACT_APP_SENTRY_RELEASE=dev # Sentry release version (suggestion: set dynamically to git commit hash in your CI)
-# CRA Settings (see https://create-react-app.dev/docs/advanced-configuration/), only affects development server
-PORT=8080
-BROWSER=none
+
+# dev server settings
+#BACKEND_PROXY={ "target": "https://dev.ident.services", "secure": true, "changeOrigin": true }
