--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
-    "@mui/styles": "^5.15.15",
     "@mui/x-date-pickers": "^7.1.1",
     "@sentry/react": "^7.109.0",
     "@sentry/tracing": "^7.109.0",
@@ -41,6 +40,7 @@
     "react-recaptcha": "^2.3.10",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
+    "tss-react": "^4.9.6",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
