--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@fontsource/roboto": "^5.0.14",
+    "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
-    "@mui/x-date-pickers": "^7.13.0",
-    "@sentry/react": "^8.26.0",
+    "@mui/x-date-pickers": "7.13.0",
+    "@sentry/react": "^8.30.0",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.5.0",
-    "@types/react": "^18.3.4",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
     "@types/react-recaptcha": "^2.3.7",
     "components-care": "github:Samedis-care/react-components#master_dist",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
-    "http-proxy-middleware": "^3.0.0",
-    "i18next": "^23.14.0",
+    "http-proxy-middleware": "^3.0.2",
+    "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-chained-backend": "^4.6.2",
     "i18next-http-backend": "^2.6.1",
@@ -29,21 +29,21 @@
     "js-cookie": "^3.0.5",
     "js-md5": "^0.8.3",
     "marked": "12.0.2",
-    "mdi-material-ui": "^7.9.1",
+    "mdi-material-ui": "^7.9.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.1",
+    "react-i18next": "^15.0.2",
     "react-query": "^3.39.3",
     "react-recaptcha": "^2.3.10",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
-    "tss-react": "^4.9.12",
-    "typescript": "^5.5.4",
+    "tss-react": "^4.9.13",
+    "typescript": "^5.6.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.1.0"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --server-type https",
@@ -77,15 +77,15 @@
     "npm": ">=8.x"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "@typescript-eslint/parser": "^8.2.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "husky": "^9.1.5",
-    "lint-staged": "^15.2.9",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
   }
 }
