Stateless docker images

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,9 +1,5 @@
 server {
-  listen 443 ssl deferred http2;
-  listen [::]:443 ssl deferred ipv6only=on http2;
-
-  ssl_certificate /etc/nginx/ssl/cert.pem;
-  ssl_certificate_key /etc/nginx/ssl/key.pem;
+  include server.conf;
 
   root /usr/share/nginx/html;
 
@@ -18,12 +14,6 @@ server {
     add_header Cache-Control "public, max-age=315360000";
     include security.conf;
     break;
-  }
-
-  # lightweight health check for load balancer
-  location = /healthy.txt {
-    add_header Content-Type text/plain;
-    return 200 'A-OK!';
   }
 
   location / {
