--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/icons-material": "^6.1.2",
-    "@mui/material": "^6.1.2",
-    "@mui/x-date-pickers": "^7.19.0",
-    "@sentry/react": "^8.33.1",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers": "^7.21.0",
+    "@sentry/react": "^8.35.0",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.7.5",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^22.7.9",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-recaptcha": "^2.3.7",
     "components-care": "github:Samedis-care/react-components#master_dist",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.0",
+    "html-webpack-plugin": "^5.6.3",
     "http-proxy-middleware": "^3.0.3",
-    "i18next": "^23.15.2",
+    "i18next": "^23.16.3",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-chained-backend": "^4.6.2",
     "i18next-http-backend": "^2.6.2",
@@ -34,13 +36,12 @@
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.2",
-    "react-query": "^3.39.3",
+    "react-i18next": "^15.1.0",
     "react-recaptcha": "^2.3.10",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "tss-react": "^4.9.13",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
@@ -77,15 +78,18 @@
     "npm": ">=8.x"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
-    "eslint": "^8.57.1",
+    "@eslint/compat": "^1.2.1",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "globals": "^15.11.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.11.0"
   }
 }
