--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "i18next-localstorage-backend": "^4.2.0",
     "js-cookie": "^3.0.5",
     "js-md5": "^0.8.3",
-    "marked": "12.0.2",
+    "marked": "^14.1.3",
     "mdi-material-ui": "^7.9.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
