--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-recaptcha": "^2.3.10",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
