--- a/.github/workflows/locale-check.yml
+++ b/.github/workflows/locale-check.yml
@@ -2,11 +2,14 @@
 
 name: LocaleCheck
 
+permissions:
+  contents: read
+
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,6 +27,6 @@ jobs:
       - name: Setup python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.12"
       - name: Check locales
         run: python check_translations.py
